# codigo-slides

./: .gitignore  .scalafmt.conf  AGENTS.md  README.md  build.sbt
.github/: copilot-instructions.md
01-static-typing/src/main/python/: equals.py
01-static-typing/src/main/scala/: Equals.scala
02-intro-oop/src/main/scala/animals/: Animal.scala  Dog.scala
03-testing/: README.md
03-testing/src/main/scala/: Calculator.scala  Counter.scala  Point.scala
03-testing/src/test/scala/: CalculatorTest.scala  CounterTest.scala  PointTest.scala
04-programming-to-abstractions/: CMakeLists.txt  README.md
04-programming-to-abstractions/src/main/c/: musician.c
04-programming-to-abstractions/src/main/python/polymorphism/: subtype_polymorphism.py
04-programming-to-abstractions/src/main/scala/animals/: AkitaInu.scala  Legged.scala  Tailed.scala
04-programming-to-abstractions/src/main/scala/domain/geometry/: ColorPoint.scala
04-programming-to-abstractions/src/main/scala/domain/network/: Socket.scala
04-programming-to-abstractions/src/main/scala/domain/people/: Musician.scala  Person.scala  Student.scala
04-programming-to-abstractions/src/main/scala/phone/: SmartPhone.scala
04-programming-to-abstractions/src/main/scala/polymorphism/: SubtypePolymorphism.scala
04-programming-to-abstractions/src/main/scala/trace/: A.scala
04-programming-to-abstractions/src/main/scala/tree/: InternalNode.scala  Leaf.scala  Tree.scala
05x-media-player-exercise/src/main/typst/: main.typ
13-tamagotchi-exercise/src/main/typst/: main.typ
(+50 files in other folders)
